--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -104,16 +104,16 @@ jobs:
   no-std:
     name: no_std (Nu detect core/alloc → build)
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-    
+
       - name: Setup Nushell
         uses: hustcer/setup-nu@v3
         with:
           version: '0.108.0'
-        
+
       - name: Toolchain + no_std target
         shell: bash
         run: |
@@ -122,47 +122,126 @@ jobs:
           rustup update stable
           rustup default stable
           rustup target add x86_64-unknown-none
-        
-      # ----------------------------------------------------------
-      # detect-nostd (Nu → files in $RUNNER_TEMP/ci)
-      # ----------------------------------------------------------
+
+      # ==========================================================
+      # detect-nostd (Nu → files)
+      # ==========================================================
       - name: detect-nostd (Nu → files)
         shell: nu {0}
         run: |
           let base = ($env.RUNNER_TEMP | path join 'ci')
           mkdir $base | ignore
-      
+
           let target_bare = "x86_64-unknown-none"
-          let meta     = (cargo metadata --no-deps --format-version=1 | from json)
-          let members  = $meta.workspace_members
+          let meta = (cargo metadata --no-deps --format-version=1 | from json)
+          let members = $meta.workspace_members
           let lib_kinds = [lib rlib staticlib cdylib dylib]
-      
+
           let pkgs = (
             $meta.packages
-            | where {|p| $members | any {|m| $m == $p.id } }
-            | where {|p|
-                $p.targets
-                | any {|t|
-                    ($t.kind? | default [])
-                    | any {|k| $lib_kinds | any {|lk| $lk == $k } }
-                  }
-              }
+            | where {|p| $members | any {|m| $m == $p.id}}
+            | where {|p| $p.targets | any {|t| ($t.kind? | default []) | any {|k| $lib_kinds | any {|lk| $lk == $k}}}}
             | get name
             | uniq
           )
-      
+
           mut core_matrix = []
           for name in $pkgs {
-            let pkg        = ($meta.packages | where name == $name | first)
-            let feat_cols  = (($pkg.features? | default {}) | columns)
-            let extra      = (
-              $feat_cols
-              | where {|f| $f != "default" and $f != "std" and $f != "alloc"}
-              | str join ","
-            )
-            let args = if ($extra | is-empty) {
-              "--no-default-features"
-            } else {
-              $"--no-default-features --features ($extra)"
+            let pkg = ($meta.packages | where name == $name | first)
+            let feat_cols = (($pkg.features? | default {}) | columns)
+            let extra = ($feat_cols | where {|f| $f != "default" and $f != "std" and $f != "alloc"} | str join ",")
+            let args = if ($extra | is-empty) {"--no-default-features"} else {$"--no-default-features --features ($extra)"}
+            $core_matrix = ($core_matrix | append { pkg: $name, args: $args })
+          }
+
+          $"($target_bare)" | save --force ($base | path join 'target_bare.txt')
+          ($pkgs | to json --raw) | save --force ($base | path join 'pkg_list.json')
+          ($core_matrix | to json --raw) | save --force ($base | path join 'core_matrix.json')
+
+          print "== no_std candidates (lib targets) =="
+          ($pkgs | each {|n| print $"- ($n)"} | ignore)
+          print $"core_matrix size: ($core_matrix | length)"
+
+      # ==========================================================
+      # detect-alloc (Nu → files)
+      # ==========================================================
+      - name: detect-alloc (Nu → files)
+        shell: nu {0}
+        run: |
+          let base = ($env.RUNNER_TEMP | path join 'ci')
+          let meta = (cargo metadata --no-deps --format-version=1 | from json)
+          let pkgs = (open ($base | path join 'pkg_list.json'))
+
+          mut alloc_matrix = []
+          for name in $pkgs {
+            let pkg = ($meta.packages | where name == $name | first)
+            let feat_cols = (($pkg.features? | default {}) | columns)
+            if ($feat_cols | any {|f| $f == "alloc"}) {
+              let extra = ($feat_cols | where {|f| $f != "default" and $f != "std" and $f != "alloc"} | str join ",")
+              let args = if ($extra | is-empty) {"--no-default-features --features alloc"} else {$"--no-default-features --features alloc,($extra)"}
+              $alloc_matrix = ($alloc_matrix | append { pkg: $name, args: $args })
             }
-            $core_matrix = ($core_matrix |
+          }
+
+          ($alloc_matrix | to json --raw) | save --force ($base | path join 'alloc_matrix.json')
+          print $"alloc_matrix size: ($alloc_matrix | length)"
+
+      # ==========================================================
+      # Debug matrices (Nu)
+      # ==========================================================
+      - name: Debug matrices (Nu)
+        if: always()
+        shell: nu {0}
+        run: |
+          let base = ($env.RUNNER_TEMP | path join 'ci')
+          print "CORE_MATRIX:"
+          open ($base | path join 'core_matrix.json') | table
+          print "ALLOC_MATRIX:"
+          if (path exists ($base | path join 'alloc_matrix.json')) {
+            open ($base | path join 'alloc_matrix.json') | table
+          } else {
+            [] | table
+          }
+
+      # ==========================================================
+      # Cargo check (no_std)
+      # ==========================================================
+      - name: Cargo check (no_std) [Nu]
+        shell: nu {0}
+        run: |
+          let base = ($env.RUNNER_TEMP | path join 'ci')
+          let TARGET = (open ($base | path join 'target_bare.txt') | decode utf-8 | str trim)
+          let core = (open ($base | path join 'core_matrix.json'))
+          let alloc = (if (path exists ($base | path join 'alloc_matrix.json')) { open ($base | path join 'alloc_matrix.json') } else { [] })
+          let final = ($core | append $alloc)
+
+          if ($final | is-empty) {
+            print "No no_std rows. Failing for visibility."
+            exit 1
+          }
+
+          for row in $final {
+            let pkg = $row.pkg
+            let args = ($row.args | split row ' ')
+            print $">> check: ($pkg) @ ($TARGET) [$row.args]"
+            ^cargo check -p $pkg --target $TARGET ...$args
+          }
+
+      # ==========================================================
+      # Cargo build (no_std, release)
+      # ==========================================================
+      - name: Cargo build (no_std, release) [Nu]
+        shell: nu {0}
+        run: |
+          let base = ($env.RUNNER_TEMP | path join 'ci')
+          let TARGET = (open ($base | path join 'target_bare.txt') | decode utf-8 | str trim)
+          let core = (open ($base | path join 'core_matrix.json'))
+          let alloc = (if (path exists ($base | path join 'alloc_matrix.json')) { open ($base | path join 'alloc_matrix.json') } else { [] })
+          let final = ($core | append $alloc)
+
+          for row in $final {
+            let pkg = $row.pkg
+            let args = ($row.args | split row ' ')
+            print $">> build: ($pkg) @ ($TARGET) [$row.args]"
+            ^cargo build -p $pkg --release --target $TARGET ...$args
+          }
