--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ serde = ["dep:serde", "dep:arrayvec"]
 [dependencies]
 cfg-if = "1"
 delegate = "0.13"
-serde = { version = "1", optional = true }
+serde = { version = "1", optional = true , default-features = false}
 parsing = { workspace = true }
 thiserror = { workspace = true }
 arrayvec = { workspace = true, optional = true }
