--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ repository.workspace = true
 
 [features]
 default = ["std"]
-std = ["alloc", "dep:smallvec", "serde?/std"]
+std = ["alloc", "dep:smallvec", "serde?/std", "num_enum/std"]
 alloc = ["serde?/alloc"]
 macro = ["dep:sid_macro"]
 serde = ["dep:serde", "dep:arrayvec"]
@@ -44,7 +44,7 @@ serde = { version = "1", optional = true , default-features = false}
 parsing = { workspace = true }
 thiserror = { workspace = true }
 arrayvec = { workspace = true, optional = true }
-num_enum = "0.7"
+num_enum = {version = "0.7", default-features = false}
 sid_macro = { workspace = true, optional = true }
 
 
